<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    >

    <EditText
        android:id="@+id/EditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:inputType="phone"
        android:textCursorDrawable="@null"
        android:maxLength="18"
        android:padding="6dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:rowCount="4"
        android:columnCount="3"
        >
        <Button
            android:id="@+id/Button1"
            style="@style/DialerButton"
            android:text="@string/one"
            />
        <Button
            android:id="@+id/Button2"
            style="@style/DialerButton"
            android:text="@string/two"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            />
        <Button
            android:id="@+id/Button3"
            style="@style/DialerButton"
            android:text="@string/three"
            />
        <Button
            android:id="@+id/Button4"
            style="@style/DialerButton"
            android:text="@string/four"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />

        <Button
            android:id="@+id/Button5"
            style="@style/DialerButton"
            android:text="@string/five"
            android:layout_margin="4dp"
            />
        <Button
            android:id="@+id/Button6"
            style="@style/DialerButton"
            android:text="@string/six"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />
        <Button
            android:id="@+id/Button7"
            style="@style/DialerButton"
            android:text="@string/seven"
            />
        <Button
            android:id="@+id/Button8"
            style="@style/DialerButton"
            android:text="@string/eight"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            />

        <Button
            android:id="@+id/Button9"
            style="@style/DialerButton"
            android:text="@string/nine"
            />
        <Button
            android:id="@+id/ButtonCall"
            style="@style/DialerButton"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@mipmap/call_bg"
            />
        <Button
            android:id="@+id/Button0"
            style="@style/DialerButton"
            android:text="@string/zero"
            android:layout_margin="4dp"
            />
        <Button
            android:id="@+id/ButtonDelete"
            style="@style/DialerButton"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@mipmap/delete_bg"
            />

    </GridLayout>

</LinearLayout>
